--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,19 @@
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .e-container {
   font-size: 0.9rem;
+  margin:  20px 0;
+}
+
+.e-description {
+  margin: 10px 0;
 }
 
 .e-test {
@@ -8,6 +22,10 @@
   border: 1px solid rgb(219, 217, 217);
   border-radius: 5px;
   box-shadow: 1px 1px 4px rgba(179, 179, 179, 0.5);
+}
+
+.e-test .form-group {
+  display: flex;
 }
 
 .e-test .btn {
